# SIH_final

./: .replit  api.py  jharkhand_document_verifier_rf.pkl  pyproject.toml  replit.md  requirements.txt  scripts.js  superuser.html  test.py
backened/shaktishield/: db.sqlite3  manage.py
backened/shaktishield/backend/: models.py  serializers.py  views.py  views_old.py
backened/shaktishield/backend/migrations/: 0001_initial.py  0002_alter_certificate_file.py
backened/shaktishield/shaktishield/: asgi.py  settings.py  urls.py  wsgi.py
backened/shaktishield/static/: scripts.js  style.css
backened/shaktishield/templates/: base.html  batch_verification.html  index.html  login.html  single_verification.html  training_verification.html
logs/: flagged_users.json  verification_attempts.json
mysite/mysite/: settings.py
